# kissdns

./: Cargo.toml  README.md  hosts.json
src/: config.rs  dns_handler.rs  main.rs
