[package]
name = "kissdns"
version = "0.1.1"
edition = "2024"
authors = ["Lucian <neuraluc@gmail.com>"]
description = "A developer-focused DNS server with fallback, caching, and wildcard support."
readme = "README.md"
homepage = "https://github.com/gni/kissdns"
repository = "https://github.com/gni/kissdns"
documentation = "https://docs.rs/kissdns"
categories = ["network-programming", "development-tools", "simulation"]
keywords = ["dns", "server", "fallback", "wildcard", "development"]
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.26"
env_logger = "0.11.7"
ctrlc = "3.4.5"
